--- a/Areas/Management/Views/Inventory/InventoryIndex.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryIndex.cshtml
@@ -44,9 +44,9 @@
                                     }
                                     else
                                     {
-                                        <a asp-action="InvDeleteQr" asp-route-invenID="@items.Id" type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
+                                        @*<a asp-action="InvDeleteQr" asp-route-invenID="@items.Id" type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
                                         <input type="hidden" class="mainid" value="@items.Id" />
-                                        <button class="btn btn-warning crprint"><i class="fa-solid fa-print"></i></button>
+                                        <button class="btn btn-warning crprint"><i class="fa-solid fa-print"></i></button>*@
                                     }
                                 </div>
                             </td>
