--- a/Areas/Management/Views/Inventory/ProductIndex.cshtml
+++ b/Areas/Management/Views/Inventory/ProductIndex.cshtml
@@ -48,9 +48,9 @@
                                     }
                                     else
                                     {
-                                        <a asp-action="DeleteQr" asp-route-ProdID="@items.Id" type="button" class="btn btn-info"><i class="fa-solid fa-trash-can"></i></a>
+                                        @*<a asp-action="DeleteQr" asp-route-ProdID="@items.Id" type="button" class="btn btn-info"><i class="fa-solid fa-trash-can"></i></a>
                                         <input type="hidden" class="mainid" value="@items.Id" />
-                                        <button class="btn btn-warning crprint"><i class="fa-solid fa-print"></i></button>
+                                        <button class="btn btn-warning crprint"><i class="fa-solid fa-print"></i></button>*@
                                     }
                                 </div>
                             </td>
