--- a/Areas/Management/Views/QrCodes/Index.cshtml
+++ b/Areas/Management/Views/QrCodes/Index.cshtml
@@ -1,15 +1,32 @@
-﻿@model IEnumerable<PurityERP.Areas.Management.Models.QR>
+﻿@model IEnumerable<QR>
 
-@{
+@*@{
     ViewData["Title"] = "Index";
-}
+}*@
 
-<h1>Index</h1>
+<h1>QR Codes</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<div class="row">
+    <div class="col-md-4 btn-group">
+        
+        <button type="button" class="btn btn-primary" id="proqr">Pro Print</button>
+        <a asp-action="PDeleteQr" class="btn btn-secondary">Delete</a>
+    </div>
+    <div class="col-md-4 btn-group">
+        
+        <button type="button" class="btn btn-primary" id="invqr">Inv Print</button>
+        <a asp-action="INDeleteQr" class="btn btn-secondary">Delete</a>
+    </div>
+ 
+    <div class="col-md-4">
+
+    </div>
+
+</div>
+
+
+
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -40,38 +57,69 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PriceAmount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QrImage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QrCategory)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QrQty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserID)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PriceAmount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QrImage)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QrCategory)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QrQty)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserID)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>
+            </tr>
+        }
     </tbody>
-</table>
+</table>*@
+@*<p>
+    <a asp-action="Create">Create New</a>
+</p>*@
+
+@section Scripts{
+
+    <script src="~/assets/plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap 4 -->
+    <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $('#proqr').click(function () {
+
+            
+            //var host = window.origin;//publish
+            var host = "https://localhost:44326";
+            //window.open(host + '/Reports/Rep/QRPurity?&St=Product', '_blank');//publish
+            window.open(host + '/Rep/QRPurity?&St=Product', '_blank');
+        });
+        $('#invqr').click(function () {
+
+            
+            //var host = window.origin;//publish
+            var host = "https://localhost:44326";
+            //window.open(host + '/Reports/Rep/QRPurity?&St=Product', '_blank');//publish
+            window.open(host + '/Rep/QRPurity?&St=Inventory', '_blank');
+        });
+
+    </script>
+
+}
