--- a/Areas/Management/Views/Reports/Index.cshtml
+++ b/Areas/Management/Views/Reports/Index.cshtml
@@ -1,25 +1,25 @@
-﻿@{
-    ViewData["Title"] = "Index";
-}
-
+﻿
 <h3 class="text-center m-4">All Report</h3>
 
-<h3 class="text-center m-4">All Report With Perameter</h3>
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr class="text-center">
-            <th>Report Title</th>
-            <th>Perameter</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="text-center">
-            <td>
-                Accountwise Transactions Report
-            </td>
-            <td>
-                <a href="~/Report/Transaction"><img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/24/000000/external-add-user-web-and-social-media-flatart-icons-outline-flatarticons.png" /></a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+
+
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr class="text-center">
+                <th>Report Title</th>
+                <th>Perameter</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="text-center">
+                <td>
+                    Accountwise Transactions Report
+                </td>
+                <td>
+                    <button type="button" class="btn btn-primary" id="proqr">Pro Print</button>
+                    <!--Report-->
+                    @*<a href="~/Report/Transaction"><img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/24/000000/external-add-user-web-and-social-media-flatart-icons-outline-flatarticons.png" /></a>*@
+                </td>
+            </tr>
+        </tbody>
+    </table>
