--- a/Areas/Management/Views/QrCodes/Index.cshtml
+++ b/Areas/Management/Views/QrCodes/Index.cshtml
@@ -116,7 +116,7 @@
             
             var host = window.origin;//publish
             //var host = "https://localhost:44326";
-            window.open(host + '/Reports/Rep/QRPurity?&St=Product', '_blank');//publish
+            window.open(host + '/Reports/Rep/QRPurity?&St=Inventory', '_blank');//publish
             //window.open(host + '/Rep/QRPurity?&St=Inventory', '_blank');
         });
 
