--- a/Areas/Management/Views/Reports/RepportsIndex.cshtml
+++ b/Areas/Management/Views/Reports/RepportsIndex.cshtml
@@ -16,7 +16,22 @@
             </td>
             <td>
                 <button type="button" class="btn btn-primary" id="workoutrep">Report</button>
-
+            </td>
+        </tr>
+        <tr class="text-center">
+            <td>
+                Datewise Work In details
+            </td>
+            <td>
+                <button type="button" class="btn btn-primary" id="workInrep">Report</button>
+            </td>
+        </tr>
+        <tr class="text-center">
+            <td>
+                Datewise Inventory In details
+            </td>
+            <td>
+                <button type="button" class="btn btn-primary" id="InvInrep">Report</button>
             </td>
         </tr>
     </tbody>
@@ -25,25 +40,44 @@
 @section Scripts{
 
     <script src="~/assets/plugins/jquery/jquery.min.js"></script>
-    Bootstrap 4
+
     <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script>
         $('#workoutrep').click(function () {
 
 
-       // var host = window.origin;//publish
-        var host = "https://localhost:44326";
-        //window.open(host + '/Reports/Rep/QRPurity?&St=Product', '_blank');//publish
-        window.open(host + '/Rep/Workoutdatewise?& ','_blank');
+       var host = window.origin;//publish
+       // var host = "https://localhost:44326";
+        window.open(host + '/Reports/Rep/Workoutdatewise?& ','_blank');//publish
+        //window.open(host + '/Rep/Workoutdatewise?& ','_blank');
     });
-    //$('#invqr').click(function () {
+    
+
+    </script>
+
+    <script>
+        $('#workInrep').click(function () {
 
 
-    //    var host = window.origin;//publish
-    //    //var host = "https://localhost:44326";
-    //    window.open(host + '/Reports/Rep/QRPurity?&St=Product', '_blank');//publish
-    //    //window.open(host + '/Rep/QRPurity?&St=Inventory', '_blank');
-    //});
+             var host = window.origin;//publish
+           // var host = "https://localhost:44326";
+            window.open(host + '/Reports/Rep/WorkIndatewise?& ','_blank');//publish
+           // window.open(host + '/Rep/WorkIndatewise?& ', '_blank');
+        });
+
+
+    </script>
+
+    <script>
+        $('#InvInrep').click(function () {
+
+
+            var host = window.origin;//publish
+            // var host = "https://localhost:44326";
+            window.open(host + '/Reports/Rep/InventoryIndatewise?& ', '_blank');//publish
+            // window.open(host + '/Rep/WorkIndatewise?& ', '_blank');
+        });
+
 
     </script>
     }
