--- a/Areas/Management/Views/Sales/Salesindex.cshtml
+++ b/Areas/Management/Views/Sales/Salesindex.cshtml
@@ -43,7 +43,8 @@
                                     @*<a asp-action="" asp-route-id="@items.Id" type="button" class="btn btn-warning">Edit</a>*@
                                     <a asp-action="Salesdetails" asp-route-id="@items.SaleID" type="button" class="btn btn-info">Details</a>
                                     <input type="hidden" class="mainid" value="@items.SaleID" />
-                                    <button class="btn btn-warning crprint"><i class="fa-solid fa-print"></i></button>
+                                    <button class="btn btn-warning crprint">Print</button>
+
                                 </div>
                             </td>
 
