--- a/Areas/Management/Views/Inventory/ProductIndex.cshtml
+++ b/Areas/Management/Views/Inventory/ProductIndex.cshtml
@@ -128,10 +128,10 @@
             $('#proqr').click(function () {
 
 
-                // var host = window.origin;//publish
-                var host = "https://localhost:44326";
-                //window.open(host + '/Reports/Rep/QRPurity?&St=Product', '_blank');//publish
-                window.open(host + '/Rep/QRPurity?&St=Product', '_blank');
+                var host = window.origin;//publish
+               // var host = "https://localhost:44326";
+                window.open(host + '/Reports/Rep/QRPurity?&St=Product', '_blank');//publish
+               // window.open(host + '/Rep/QRPurity?&St=Product', '_blank');
             });
 
         </script>
