--- a/Areas/Management/Views/Inventory/InventoryIndex.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryIndex.cshtml
@@ -17,9 +17,10 @@
         <a asp-action="InventoryCreate" class=" btn btn-primary mb-3 float-right">Create New</a>
 
         <div class="col-md-4 btn-group m-auto">
+       
+                    <button type="button" class="btn btn-danger" id="invqr">Inv Print</button>
+                    <a asp-action="INDeleteQr" class="btn btn-secondary">Delete</a>
 
-            <button type="button" class="btn btn-danger" id="invqr">Inv Print</button>
-            <a asp-action="INDeleteQr" class="btn btn-secondary">Delete</a>
         </div>
         <!-- /.card-header -->
         <div class="card-body">
@@ -141,7 +142,7 @@
 
                          var host = window.origin;//publish
                          //var host = "https://localhost:44326";
-                         window.open(host + '/Reports/Rep/QRPurity?&St=Inentory', '_blank');//publish
+                         window.open(host + '/Reports/Rep/QRPurity?&St=Inventory', '_blank');//publish
                          //window.open(host + '/Rep/QRPurity?&St=Inventory', '_blank');
                          });
            
