--- a/Areas/Management/Views/Inventory/InventoryIndex.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryIndex.cshtml
@@ -141,7 +141,7 @@
 
                          var host = window.origin;//publish
                          //var host = "https://localhost:44326";
-                         window.open(host + '/Reports/Rep/QRPurity?&St=Inentory', '_blank');//publish
+                         window.open(host + '/Reports/Rep/QRPurity?&St=Inventory', '_blank');//publish
                          //window.open(host + '/Rep/QRPurity?&St=Inventory', '_blank');
                          });
            
