--- a/Areas/Management/Views/Reports/RepportsIndex.cshtml
+++ b/Areas/Management/Views/Reports/RepportsIndex.cshtml
@@ -117,7 +117,7 @@
             var host = window.origin;//publish
             // var host = "https://localhost:44326";
             window.open(host + '/Reports/Rep/InventoryDetails?& ', '_blank');//publish
-            // window.open(host + '/Rep/SalesIndatewise?& ', '_blank');
+            // window.open(host + '/Rep/InventoryDetails?& ', '_blank');
         });
 
 
