--- a/Areas/Management/Views/Work/WorkIndex.cshtml
+++ b/Areas/Management/Views/Work/WorkIndex.cshtml
@@ -54,7 +54,9 @@
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-info">Details</a>
                                     <a asp-action="WorkManage" asp-route-id="@items.WorkId" type="button" class="btn btn-dark">Manage</a>
-                                    
+                                    <input type="hidden" class="mainid" value="@items.WorkId" />
+                                    <button class="btn btn-warning crprint">Print</button>
+
                                 </div>
                             </td>
                         </tr>
@@ -80,29 +82,29 @@
 
 
 
-@section Scripts {
-    <script src="~/assets/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- DataTables  & Plugins -->
-    <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/jszip/jszip.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/assets/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <!-- Page specific script -->
+    @section Scripts {
+        <script src="~/assets/plugins/jquery/jquery.min.js"></script>
+        <!-- Bootstrap 4 -->
+        <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- DataTables  & Plugins -->
+        <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+        <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/jszip/jszip.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+        <!-- AdminLTE App -->
+        <script src="~/assets/dist/js/adminlte.min.js"></script>
+        <!-- AdminLTE for demo purposes -->
+        <!-- Page specific script -->
 
-    <script>
+        <script>
         $(function () {
             $('.stitchdetails').click(function () {
                 var Styleid = $(this).data('assigned-id');
@@ -123,15 +125,29 @@
             });
 
         });
-    </script>
-    <script>
+        </script>
+        <script>
             $(function () {
                 $("#example1").DataTable({
                     "responsive": true, "lengthChange": false, "autoWidth": false,
                     "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
                 }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
             });
-    </script>
-}
+        </script>
+
+        <script>
+            $('.crprint').click(function () {
+
+                var val = $(this).closest("tr").find("input[class='mainid']").val();
+
+                var host = window.origin; //Publish
+                //var host = "https://localhost:44326";
+                window.open(host + '/Reports/Rep/Work?WorkID=' + val, '_blank'); //Publish
+                //window.open(host + '/Rep/Work?WorkID=' + val);
+            });
+
+               
+        </script>
+    }
 </body>
 </html>
