--- a/Areas/Management/Views/Reports/RepportsIndex.cshtml
+++ b/Areas/Management/Views/Reports/RepportsIndex.cshtml
@@ -170,7 +170,7 @@
 
             var host = window.origin;//publish
             // var host = "https://localhost:44326";
-            window.open(host + '/Reports/Rep/ProductStockDetails?& ', '_blank');//publish
+            window.open(host + '/Reports/Rep/ProductStockDetails ', '_blank');//publish
             // window.open(host + '/Rep/ProductStockDetails?& ', '_blank');
         });
 
@@ -183,7 +183,7 @@
 
             var host = window.origin;//publish
             // var host = "https://localhost:44326";
-            window.open(host + '/Reports/Rep/WorkLive?& ', '_blank');//publish
+            window.open(host + '/Reports/Rep/WorkLive ', '_blank');//publish
             // window.open(host + '/Rep/WorkLive?& ', '_blank');
         });
 
