--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -293,6 +293,14 @@
                                 </p>
                             </a>
                         </li>
+                        @*<li class="nav-item">
+                            <a asp-area="Management" asp-controller="Sales" asp-action="hisabkoro" class="nav-link">
+                                <i class="fas fa-unlock-alt"></i>
+                                <p>
+                                    hisabkoro
+                                </p>
+                            </a>
+                        </li>*@
 
 </nav>
                 <!-- /.sidebar-menu -->
