--- a/Areas/Management/Views/Inventory/InventoryOutCreate.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryOutCreate.cshtml
@@ -1,4 +1,5 @@
-﻿@model PurityERP.Areas.Management.Models.InventoryOut
+﻿
+@model PurityERP.Areas.Management.Models.InventoryOut
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
