--- a/Areas/Management/Views/Inventory/EditProduct.cshtml
+++ b/Areas/Management/Views/Inventory/EditProduct.cshtml
@@ -54,6 +54,12 @@
             document.getElementById('remainqty').value = qty;
         }
 
+        $(".custom-file-input").on("change", function () {
+            var fileName = $(this).val().split("\\").pop();
+            $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+        });
+
+
     </script>
 </body>
 </html>
