--- a/Areas/Management/Views/Sales/Sales.cshtml
+++ b/Areas/Management/Views/Sales/Sales.cshtml
@@ -14,6 +14,7 @@
     <hr />
     <div class="row">
         <div class="col-6">
+            
 
             <div class="row">
                 <div class="col-md-12">
@@ -345,6 +346,7 @@
 
         <script>
 
+
             $(function () {
                 $('.select2').select2()
             });
@@ -512,7 +514,7 @@
             }
         });
         //add multi item to table
-        $('#additem').click(function () {
+        $('#additem').click(function (e) {
             var customer = $('#supplier').val();
             var product = $('#productname').val();
             var productid = $('#inv').val();
@@ -523,6 +525,7 @@
             var total = $('#totaltt').val();
             var unitprice = (amount / quan);
 
+            console.log(e);
             var remm = $('#rmn').val();
             var cp = quan;
             $("#partTable TR").each(function () {
