--- a/Areas/Management/Views/Inventory/EditProduct.cshtml
+++ b/Areas/Management/Views/Inventory/EditProduct.cshtml
@@ -1,4 +1,69 @@
-﻿@model PurityERP.Areas.Management.Models.Product
+﻿@*@model PurityERP.Areas.Management.Models.Product
+    <html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title></title>
+    </head>
+    <body>
+        <div class="card card-primary mt-5">
+            <div class="card-header">
+                <h3 class="card-title">Product Edit</h3>
+            </div>
+
+    <form asp-action="EditProduct">
+        <div class="card-body">
+            <div class="form-group">
+                <label for="exampleInputPassword1">Product Tittle</label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Product Tittle" asp-for="ProductTittle">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Product Code</label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Product Code" asp-for="ProductCode">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Costing price</label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Costing price" asp-for="CostingPrice">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Sales price</label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Sales price" asp-for="SalesPrice">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Discount Rate</label>
+                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Discount Rate" asp-for="DiscountRate">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Initial Product Stock Quantity</label>
+                <input type="text" class="form-control" id="initqty" onkeyup="initqtyf()" placeholder="Stock Quantity" asp-for="InitialProductStockQty">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Remain Quantity</label>
+                <input type="text" class="form-control" id="remainqty" readonly placeholder="Remain Quantity" asp-for="RemainingQty">
+            </div>
+        </div>
+
+    <div class="card-footer">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
+        <script>
+            function initqtyf() {
+                var qty = document.getElementById('initqty').value;
+                document.getElementById('remainqty').value = qty;
+            }
+
+            $(".custom-file-input").on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+            });
+
+
+        </script>
+    </body>
+    </html>*@
+
+
+@model PurityERP.Areas.Management.ViewModel.ProductVM
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
@@ -10,36 +75,59 @@
         </div>
         <!-- /.card-header -->
         <!-- form start -->
-        <form asp-action="EditProduct">
+        <form enctype="multipart/form-data" asp-action="EditProduct">
+
+
             <div class="card-body">
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Product Tittle</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Product Tittle" asp-for="ProductTittle">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Product Code</label>
+                            <input type="text" required class="form-control" id="exampleInputPassword1" placeholder="Product Code" asp-for="ProductCode">
+                            <p class="text-danger">    @TempData["msg"]</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Product Tittle</label>
+                            <input type="text" required class="form-control" id="exampleInputPassword1" placeholder="Product Tittle" asp-for="ProductTittle">
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Product Code</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Product Code" asp-for="ProductCode">
+
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Costing price</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Costing price" asp-for="CostingPrice">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Sales price</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Sales price" asp-for="SalesPrice">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Discount (%)</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Discount Rate" asp-for="DiscountRate">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Initial Product Stock Quantity</label>
+                            <input type="text" class="form-control" id="initqty" onkeyup="initqtyf()" placeholder="Stock Quantity" asp-for="InitialProductStockQty">
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Costing price</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Costing price" asp-for="CostingPrice">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Image</label>
+                        <input class="form-control" id="initqty" asp-for="ProductImage" accept="image/*">
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Sales price</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Sales price" asp-for="SalesPrice">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Discount Rate</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Discount Rate" asp-for="DiscountRate">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Initial Product Stock Quantity</label>
-                    <input type="text" class="form-control" id="initqty" onkeyup="initqtyf()" placeholder="Stock Quantity" asp-for="InitialProductStockQty">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Remain Quantity</label>
-                    <input type="text" class="form-control" id="remainqty" readonly placeholder="Remain Quantity" asp-for="RemainingQty">
-                </div>
+
             </div>
             <!-- /.card-body -->
 
@@ -54,11 +142,12 @@
             document.getElementById('remainqty').value = qty;
         }
 
+
+
         $(".custom-file-input").on("change", function () {
             var fileName = $(this).val().split("\\").pop();
             $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
         });
-
 
     </script>
 </body>
